monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
  - host: grafana.ns.wg 
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
